# AzureCognitiveServices

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
AzureCognitiveServices/: pipeline.py  recognizer.py
AzureCognitiveServices/config/secrets/: credentials.yaml
AzureCognitiveServices/helpers/: azure_connection.py  click_helpers.py  csv_helper.py  logging_helpers.py
AzureConnection/: connect.py
config/secrets/: credentials.yaml-sample
tests/: test_ins_azure_cognitive_services.py
